[package]
name = "gui"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default=["windows"]
windows=[]

[dependencies.windows]

version = "0.60.0"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics",
    "Win32_Graphics_Gdi",
    "Win32_System",
    "Win32_System_LibraryLoader",
]
